--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "ws": "^8.18.0"
   }
 }
